--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <div id="urls"></div>
     <div id="status"></div>
     <div id="contentBtn"></div>
+    <p>Загруженный контент:</p>
+    <div id="contentList"></div>
     <div id="content"></div>
   </div>
 
